RESOLVED FIXED309287
Re-enable unsafe-buffer-usage-in-format-attr-call warning, with failures now fixed
https://bugs.webkit.org/show_bug.cgi?id=309287
Summary Re-enable unsafe-buffer-usage-in-format-attr-call warning, with failures now ...
Geoffrey Garen
Reported 2026-03-05 12:20:56 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-05 12:21:04 PST
Geoffrey Garen
Comment 2 2026-03-05 12:22:55 PST
EWS
Comment 3 2026-03-05 15:50:48 PST
Committed 308758@main (bae0eae6996b): <https://commits.webkit.org/308758@main> Reviewed commits have been landed. Closing PR #60001 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.