Re-enable unsafe-buffer-usage-in-format-attr-call warning, with failures now fixed https://bugs.webkit.org/show_bug.cgi?id=309287 rdar://171835248

Reviewed by Ryosuke Niwa and Chris Dumez.

We need to show the compiler that a %s string is null terminated.

* Source/JavaScriptCore/Configurations/Base.xcconfig:
* Source/JavaScriptCore/bytecode/Instruction.h:
(JSC::BaseInstruction::name const):
* Source/JavaScriptCore/bytecode/UnlinkedCodeBlock.cpp:
(JSC::dumpExpressionInfoDetails):
* Source/JavaScriptCore/llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):
* Source/JavaScriptCore/runtime/PredictionFileCreatingFuzzerAgent.cpp:
(JSC::PredictionFileCreatingFuzzerAgent::getPredictionInternal):
* Source/JavaScriptCore/runtime/RegExp.cpp:
(JSC::RegExp::matchCompareWithInterpreter):
(JSC::RegExp::printTraceData):
* Source/JavaScriptCore/runtime/SamplingCounter.cpp:
(JSC::AbstractSamplingCounter::dump):
* Source/WTF/Configurations/Base.xcconfig:
* Source/WTF/wtf/StdLibExtras.h:
* Source/WTF/wtf/darwin/LibraryPathDiagnostics.mm:
(WTF::LibraryPathDiagnosticsLogger::logJSONPayload):
(WTF::LibraryPathDiagnosticsLogger::logDynamicLibraryInfo):
(WTF::LibraryPathDiagnosticsLogger::logCryptexCanaryInfo):
* Source/WTF/wtf/text/WTFString.cpp:
(String::show const):
* Source/WebCore/Configurations/Base.xcconfig:
* Source/WebCore/PAL/Configurations/Base.xcconfig:
* Source/WebGPU/Configurations/Base.xcconfig:
* Source/WebInspectorUI/Configurations/Base.xcconfig:
* Source/WebKit/Configurations/Base.xcconfig:

Canonical link: https://commits.webkit.org/308758@main